--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".controllers.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,10 +20,14 @@
         </activity>
 
         <service
-            android:name=".SoundDetectionService"
+            android:name=".sound.SoundDetectionService"
             android:enabled="true"
-            android:stopWithTask="true"
-            android:exported="true"></service>
+            android:exported="true"
+            android:stopWithTask="true" />
+        <!--<service-->
+            <!--android:name=".SpeechService"-->
+            <!--android:enabled="true"-->
+            <!--android:exported="true"></service>-->
     </application>
 
 </manifest>
