--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".controllers.MainActivity">
+        <activity
+            android:name=".controllers.MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,10 +26,6 @@
             android:enabled="true"
             android:exported="true"
             android:stopWithTask="true" />
-        <!--<service-->
-            <!--android:name=".SpeechService"-->
-            <!--android:enabled="true"-->
-            <!--android:exported="true"></service>-->
     </application>
 
 </manifest>
